Converted all posts to a new collection notes

--- a/_layouts/collection_item.html
+++ b/_layouts/collection_item.html
@@ -5,8 +5,8 @@ layout: general
 
     <header class="post-header">
         <h1 class="post-title p-name" itemprop="name headline">{{ page.title}}</h1>
-        {% if page.catagory %}
-        <p><b>Catagory: </b> {{page.catagory}} </p>
+        {% if page.category %}
+        <p><b>Catagory: </b> {{page.category}} </p>
         {% endif %}
         {% if page.filename %}
         <p><b>File: </b> <code>{{page.filename}}</code> </p>
