--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+    <link rel="stylesheet" href="{{"/assets/styles/custom.css" | absolute_url}}">
     {%- feed_meta -%}
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
       {%- include google-analytics.html -%}
     {%- endif -%}
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
+
